--- a/src/components/Writer/Writer.css
+++ b/src/components/Writer/Writer.css
@@ -4,9 +4,12 @@
     /* border: 1px solid tomato; */
     line-height: 25px;
     border-radius: 5px;
-    box-shadow: 0 0 10px 0px rgba(0,0,0,.2);
+    /* box-shadow: 0 0 10px 0px rgba(0,0,0,.2); */
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
     border: none;
     outline: none;
+    /* color: #130f40; */
+    /* margin-right: 5rem; */
     /* width: 80%; */
 }
 
@@ -22,8 +25,9 @@
     outline: none;
     border: none;
     border-radius: 5px;
-    font-weight: 600;
+    font-weight: bolder;
     font-size: 1rem;
+    color: #130f40;
     cursor: pointer;
     background-color: rgb(23, 165, 170)
 }
