--- a/src/components/Writers/Writers.css
+++ b/src/components/Writers/Writers.css
@@ -2,6 +2,8 @@
     display: flex;
     gap: 20px;
     margin: 20px;
+    margin-right: 10rem;
+    margin-left: 10rem;
 }
 
 .writer-container .writer-info{
@@ -18,10 +20,19 @@
     grid-template-columns: repeat(3,1fr);
     gap: 20px;
     padding: 20px;
+    border-left: .5px solid lightgray;
 }
 
 
-/* media */
+
+/* media queries  */
+@media (max-width:1300px){
+    .writer-container{
+        margin-right: 2rem;
+        margin-left: 2rem;
+    }
+}
+
 @media (max-width:991px){
     .writer-container .writer-cart{
         grid-template-columns: repeat(2,1fr);
